project1/test/test_11712639_1.out
Error type B at Line 2: Missing semicolon ';'
Error type B at Line 3: Missing semicolon ';'
Error type B at Line 5: Missing semicolon ';'
Error type B at Line 6: Missing semicolon ';'
Error type B at Line 7: Missing semicolon ';'
