project1/test/test_11712639_1.spl
int a, b, c
int
int func(){
    char s = '\xaa'
    a = 0
    return a
}